# Lily-Core

./: .dockerignore  .env.template  CMakeLists.txt  Dockerfile  README.md  __init__.py  chatbot.py  http_server.py  main.py  mcp_client.py  nginx.conf  requirements.txt  services.json  test_initialization.py  tool_servers.json
.github/workflows/: build-test-push.yml  build.yml  deploy.yml  docker-build.yml
api/: __init__.py  routes.py
core/: __init__.py  config.py
docs/: tts_websocket_protocol.md
include/lily/: LilyApplication.hpp
include/lily/api/: swagger.json
include/lily/config/: AppConfig.hpp
include/lily/controller/: ChatController.hpp  SessionController.hpp  SystemController.hpp
include/lily/core/: ApplicationContext.hpp
include/lily/models/: AgentLoop.hpp
include/lily/repository/: MemoryRepository.hpp
include/lily/services/: AgentLoopService.hpp  ChatService.hpp  EchoService.hpp  GatewayService.hpp  HTTPServer.hpp  MemoryService.hpp  Service.hpp  SessionService.hpp  TTSService.hpp  ToolService.hpp  WebSocketManager.hpp
include/lily/utils/: SystemMetrics.hpp  ThreadPool.hpp
models/: __init__.py  api.py  message.py
services/: ToolService.cpp  __init__.py  agent_loop_service.py  chat_service.py  memory_service.py  tool_service.py  tts_service.py  websocket_manager.py
src/: main.cpp
src/controller/: ChatController.cpp  SessionController.cpp  SystemController.cpp
src/services/: AgentLoopService.cpp  ChatService.cpp  EchoService.cpp  GatewayService.cpp  GatewayServiceHttp.cpp  HTTPServer.cpp  MemoryService.cpp  Service.cpp  SessionService.cpp  TTSService.cpp  ToolService.cpp  WebSocketManager.cpp
src/utils/: SystemMetrics.cpp
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
utils/: __init__.py  text_utils.py
